chore: update .env.example to use production api url and document local dev

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:5000/api
+# For production
+VITE_API_BASE_URL=https://animomart-1d0c1ca37e73.herokuapp.com/api
+# For local development
+# VITE_API_BASE_URL=http://localhost:5000/api
 
 # Google OAuth Configuration
 VITE_GOOGLE_CLIENT_ID=your_google_client_id_here.apps.googleusercontent.com
