--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.4.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
